[gd_scene load_steps=3 format=3 uid="uid://drafu4p0wyln0"]

[ext_resource type="Script" path="res://PipeLogic.gd" id="1_bv3v2"]
[ext_resource type="PackedScene" uid="uid://d0i5m26pos1e2" path="res://water_sprinkler.tscn" id="2_fwgpy"]

[node name="PipeLevel" type="Node2D"]
script = ExtResource("1_bv3v2")

[node name="WaterSprinkler3" parent="." instance=ExtResource("2_fwgpy")]
position = Vector2(527, 228)
rotation = -1.54723

[node name="WaterSprinkler4" parent="." instance=ExtResource("2_fwgpy")]
position = Vector2(325, 201)
rotation = 0.215203

[node name="WaterSprinkler2" parent="." instance=ExtResource("2_fwgpy")]
position = Vector2(528, 265)
rotation = -2.87267
scale = Vector2(3, 3)

[node name="WaterSprinkler1" parent="." instance=ExtResource("2_fwgpy")]
position = Vector2(371, -30)
